[gd_scene load_steps=37 format=2]

[ext_resource path="res://Scenes/Characters/Enemy Base/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/SpriteSheets/Enemies/Sprite-ogre.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Characters/Enemies/Melee/Melee1FSM.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Shaders/FlashShader.tres" type="Material" id=4]
[ext_resource path="res://Scenes/Weapons/Sword/Sword.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Characters/Enemies/Melee/Melee1.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Effects/Dust/Dust.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Weapons/Spear/Spear.tscn" type="PackedScene" id=8]
[ext_resource path="res://Sprites/SpriteSheets/Weapons/Sword/Sprite-weapon-sword.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 40, 40, 40 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 40, 40, 40, 40 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 80, 40, 40, 40 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 120, 40, 40, 40 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 80, 40, 40 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 40, 80, 40, 40 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 80, 80, 40, 40 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 120, 80, 40, 40 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 160, 80, 40, 40 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 200, 80, 40, 40 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "Idle",
"speed": 4.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Walk",
"speed": 8.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Death",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 8, 3.5 )

[sub_resource type="Animation" id=18]
resource_name = "Death"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_explosion"
}, {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "drop_weapon"
} ]
}

[sub_resource type="Animation" id=19]
resource_name = "Hurt"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=15]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Idle" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:material:shader_param/flash_modifier")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite/Hurtbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=17]
resource_name = "Walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 9 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=34]
resource_local_to_scene = true
animations = [ {
"frames": [ SubResource( 33 ) ],
"loop": false,
"name": "Idle",
"speed": 1.0
}, {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "Attack",
"speed": 12.0
} ]

[node name="Melee1" instance=ExtResource( 1 )]
collision_layer = 8
script = ExtResource( 6 )
attack_cd_easy = 2.0
dust_scene = ExtResource( 7 )

[node name="FiniteStateMachine" parent="." index="0"]
script = ExtResource( 3 )

[node name="AnimatedSprite" parent="." index="1"]
material = ExtResource( 4 )
frames = SubResource( 13 )
animation = "Idle"
offset = Vector2( 0, -20 )

[node name="Hurtbox" parent="AnimatedSprite" index="0"]
position = Vector2( 0, -20 )
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" parent="AnimatedSprite/Hurtbox" index="0"]
position = Vector2( 0, 2.25 )

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 0, -3.5 )
shape = SubResource( 14 )

[node name="AnimationPlayer" parent="." index="3"]
anims/Death = SubResource( 18 )
anims/Hurt = SubResource( 19 )
anims/Idle = SubResource( 15 )
anims/RESET = SubResource( 16 )
anims/Walk = SubResource( 17 )

[node name="Weapons" type="Node2D" parent="." index="5"]

[node name="Sword" parent="Weapons" index="0" instance=ExtResource( 5 )]
visible = false

[node name="AnimatedSprite" parent="Weapons/Sword/Node2D" index="0"]
frames = SubResource( 34 )

[node name="Hitbox" parent="Weapons/Sword/Node2D/AnimatedSprite" index="0"]
collision_mask = 4

[node name="Spear" parent="Weapons" index="1" instance=ExtResource( 8 )]
visible = false

[node name="Hitbox" parent="Weapons/Spear/Node2D/AnimatedSprite" index="0"]
collision_mask = 4

[node name="Eyes" parent="." index="7"]
position = Vector2( 0, -22 )

[node name="EyeL" parent="Eyes" index="0"]
position = Vector2( -1.5, 0 )

[node name="EyeR" parent="Eyes" index="1"]
position = Vector2( 4.5, 0 )

[connection signal="animation_finished" from="Eyes/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Weapons/Sword"]
[editable path="Weapons/Spear"]
